// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSite custom-i18n-site loads site 1`] = `
{
  "baseUrl": "/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "en": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en-custom",
        "translate": false,
        "url": "https://example.com",
      },
      "zh-Hans": {
        "baseUrl": "/zh-Hans/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "zh-Hans",
        "label": "简体中文",
        "path": "zh-Hans-custom",
        "translate": true,
        "url": "https://example.com",
      },
    },
    "locales": [
      "en",
      "zh-Hans",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site/i18n/en-custom",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "en": {
          "path": "en-custom",
        },
        "zh-Hans": {
          "path": "zh-Hans-custom",
        },
      },
      "locales": [
        "en",
        "zh-Hans",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Site",
    "titleDelimiter": "|",
    "url": "https://example.com",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/custom-i18n-site",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl loads site - custom config 1`] = `
{
  "baseUrl": "/myBaseUrl-2/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "en": {
        "baseUrl": "/myBaseUrl-2/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
    },
    "locales": [
      "en",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl-2/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl-2/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello 2",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/docusaurus.config.custom.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl loads site - custom outDir 1`] = `
{
  "baseUrl": "/myBaseUrl/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
    },
    "locales": [
      "en",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/custom-out-dir/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl loads site 1`] = `
{
  "baseUrl": "/myBaseUrl/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
    },
    "locales": [
      "en",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site -  locale fr + custom outDir 1`] = `
{
  "baseUrl": "/myBaseUrl/fr/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "fr",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/fr",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/custom-out-dir/fr/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/fr/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/fr/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - custom outDir 1`] = `
{
  "baseUrl": "/myBaseUrl/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/custom-out-dir/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - locale de 1`] = `
{
  "baseUrl": "/WHATEVER/de/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "de",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/de",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/WHATEVER/de/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/WHATEVER/de/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/WHATEVER/de/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - locale en 1`] = `
{
  "baseUrl": "/myBaseUrl/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - locale es 1`] = `
{
  "baseUrl": "/es/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "es",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/es",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/es/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/es/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/es/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - locale fr 1`] = `
{
  "baseUrl": "/myBaseUrl/fr/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "fr",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/fr",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/fr/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/fr/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/fr/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site - locale it 1`] = `
{
  "baseUrl": "/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "it",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/it",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;

exports[`loadSite simple-site-with-baseUrl-i18n loads site 1`] = `
{
  "baseUrl": "/myBaseUrl/",
  "codeTranslations": {},
  "currentBundler": {
    "instance": [Function],
    "name": "webpack",
  },
  "generatedFilesDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/.docusaurus",
  "headTags": "",
  "i18n": {
    "currentLocale": "en",
    "defaultLocale": "en",
    "localeConfigs": {
      "de": {
        "baseUrl": "/WHATEVER/de/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "de",
        "label": "Deutsch",
        "path": "de",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "en": {
        "baseUrl": "/myBaseUrl/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "en",
        "label": "English",
        "path": "en",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "es": {
        "baseUrl": "/es/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "es",
        "label": "Español",
        "path": "es",
        "translate": false,
        "url": "https://es.docusaurus.io",
      },
      "fr": {
        "baseUrl": "/myBaseUrl/fr/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "fr",
        "label": "Français",
        "path": "fr",
        "translate": false,
        "url": "https://docusaurus.io",
      },
      "it": {
        "baseUrl": "/",
        "calendar": "gregory",
        "direction": "ltr",
        "htmlLang": "it",
        "label": "Italiano",
        "path": "it",
        "translate": false,
        "url": "https://it.docusaurus.io",
      },
    },
    "locales": [
      "en",
      "fr",
      "es",
      "de",
      "it",
    ],
    "path": "i18n",
  },
  "localizationDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/i18n/en",
  "outDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/build/",
  "plugins": [
    {
      "content": undefined,
      "defaultCodeTranslations": {},
      "getClientModules": [Function],
      "globalData": undefined,
      "injectHtmlTags": [Function],
      "name": "docusaurus-bootstrap-plugin",
      "options": {
        "id": "default",
      },
      "path": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
    {
      "configureWebpack": [Function],
      "content": undefined,
      "defaultCodeTranslations": {},
      "globalData": undefined,
      "name": "docusaurus-mdx-fallback-plugin",
      "options": {
        "id": "default",
      },
      "path": ".",
      "routes": [],
      "version": {
        "type": "synthetic",
      },
    },
  ],
  "postBodyTags": "",
  "preBodyTags": "",
  "routes": [],
  "routesPaths": [
    "/myBaseUrl/404.html",
  ],
  "siteConfig": {
    "baseUrl": "/myBaseUrl/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "future": {
      "experimental_faster": {
        "gitEagerVcs": false,
        "lightningCssMinimizer": false,
        "mdxCrossCompilerCache": false,
        "rspackBundler": false,
        "rspackPersistentCache": false,
        "ssgWorkerThreads": false,
        "swcHtmlMinimizer": false,
        "swcJsLoader": false,
        "swcJsMinimizer": false,
      },
      "experimental_router": "browser",
      "experimental_storage": {
        "namespace": false,
        "type": "localStorage",
      },
      "experimental_vcs": {
        "getFileCreationInfo": [Function],
        "getFileLastUpdateInfo": [Function],
        "initialize": [Function],
      },
      "v4": {
        "removeLegacyPostBuildHeadAttribute": false,
        "useCssCascadeLayers": false,
      },
    },
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {
        "de": {
          "baseUrl": "/WHATEVER/de/",
        },
        "en": {
          "baseUrl": "/myBaseUrl/",
        },
        "es": {
          "baseUrl": "/es/",
          "url": "https://es.docusaurus.io",
        },
        "fr": {
          "baseUrl": "/myBaseUrl/fr/",
        },
        "it": {
          "baseUrl": "/",
          "url": "https://it.docusaurus.io",
        },
      },
      "locales": [
        "en",
        "fr",
        "es",
        "de",
        "it",
      ],
      "path": "i18n",
    },
    "markdown": {
      "anchors": {
        "maintainCase": false,
      },
      "emoji": true,
      "format": "mdx",
      "hooks": {
        "onBrokenMarkdownImages": "throw",
        "onBrokenMarkdownLinks": "warn",
      },
      "mdx1Compat": {
        "admonitions": true,
        "comments": true,
        "headingIds": true,
      },
      "mermaid": false,
      "parseFrontMatter": [Function],
      "preprocessor": undefined,
      "remarkRehypeOptions": undefined,
    },
    "noIndex": false,
    "onBrokenAnchors": "warn",
    "onBrokenLinks": "throw",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n/docusaurus.config.js",
  "siteDir": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/loadSiteFixtures/simple-site-with-baseUrl-i18n",
  "siteMetadata": {
    "docusaurusVersion": "<CURRENT_VERSION>",
    "pluginVersions": {},
    "siteVersion": undefined,
  },
  "siteStorage": {
    "namespace": "",
    "type": "localStorage",
  },
  "siteVersion": undefined,
}
`;
